--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,8 @@
 {
   "legacyEditor": false,
   "livePreview": true,
-  "attachmentFolderPath": "Attachment/figures"
+  "attachmentFolderPath": "figures",
+  "alwaysUpdateLinks": true,
+  "trashOption": "local",
+  "promptDelete": false
 }
